--- a/geography copy/mcq/index.html
+++ b/geography copy/mcq/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/mcq.css" />
+    <link rel="stylesheet" href="./mcq.css" />
     <style>
         /* Include the CSS from above here */
     </style>
