--- a/geography copy/mcq/index.html
+++ b/geography copy/mcq/index.html
@@ -132,9 +132,8 @@
     </div>
 
     <script src="/mcq.js"></script>
-    ,<script src="/script.js"></script>
-    <script>
-        
-    </script>
+    <script src="/script.js"></script>
+    <script src="./mcq.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
