--- a/geography/mcq/index.html
+++ b/geography/mcq/index.html
@@ -6,6 +6,7 @@
     <title>MCQ Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <base href="/studyBuddy/">
     <link rel="stylesheet" href="/mcq.css">
 
 </head>
