--- a/geography/mcq/index.html
+++ b/geography/mcq/index.html
@@ -8,14 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <base href="/studyBuddy/">
     <link rel="stylesheet" href="/mcq.css">
+    <link rel="stylesheet" href="/base.css">
 
 </head>
 <body>
     <nav class="nav">
-        <a href="#" class="logo"></a>
+        <a class="logo"></a>
         <h>Geography mcqs</h>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a >Home</a></li>
             <li><a target="_blank" href="https://pavansweb.github.io/UwU/">About Me</a></li>
             <li><a target="_blank" href="https://pavansweb.github.io/contact/">Contact</a></li>
         </ul>
