--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <base href="/studyBuddy/">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/base.css">
+    <link rel="stylesheet" href="/studyBuddy/style.css">
+    <link rel="stylesheet" href="/studyBuddy/base.css">
 </head>
 <body>
 
