--- a/geography/mcq/index.html
+++ b/geography/mcq/index.html
@@ -6,9 +6,10 @@
     <title>MCQ Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-    <base href="/studyBuddy/">
     <link rel="stylesheet" href="/mcq.css">
     <link rel="stylesheet" href="/base.css">
+    <link rel="stylesheet" href="/studyBuddy/mcq.css">
+    <link rel="stylesheet" href="/studyBuddy/base.css">
 
 </head>
 <body>
@@ -16,7 +17,7 @@
         <a class="logo"></a>
         <h>Geography mcqs</h>
         <ul class="nav-links">
-            <li><a >Home</a></li>
+            <li><a>Home</a></li>
             <li><a target="_blank" href="https://pavansweb.github.io/UwU/">About Me</a></li>
             <li><a target="_blank" href="https://pavansweb.github.io/contact/">Contact</a></li>
         </ul>
