--- a/geography/mcq/index.html
+++ b/geography/mcq/index.html
@@ -253,6 +253,7 @@
 
     <script src="/mcq.js"></script>
     <script src="/script.js"></script>
+    <script src="/studyBuddy/script.js"></script>
     <script>
 
     </script>
