--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     </div>
 
     <script src="/script.js"></script>
+    <script src="/studyBuddy/script.js"></script>
     <script>
         // JavaScript to handle dropdown menu
         document.querySelectorAll('.subject-toggle').forEach(function(toggle) {
