--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/base.css">
     <link rel="stylesheet" href="/studyBuddy/style.css">
     <link rel="stylesheet" href="/studyBuddy/base.css">
 </head>
@@ -36,8 +34,8 @@
             <div class="subject-item">
                 <a class="subject-toggle">History <span class="arrow">&#9654;</span></a>
                 <div class="subject-options">
-                    <a href="/history/mcq/">MCQs</a>
-                    <a href="/history/qa">Questions & Answers</a>
+                    <a href="/studyBuddy/history/mcq/">MCQs</a>
+                    <a href="/studyBuddy/history/qa">Questions & Answers</a>
                     <a href="#">Revision Links</a>
                 </div>
             </div>
@@ -45,7 +43,7 @@
             <div class="subject-item">
                 <a class="subject-toggle">Geography <span class="arrow">&#9654;</span></a>
                 <div class="subject-options">
-                    <a href="/geography/mcq/">MCQs</a>
+                    <a href="/studyBuddy/geography/mcq/">MCQs</a>
                     <a href="#">Questions & Answers</a>
                     <a href="#">Revision Links</a>
                 </div>
@@ -80,7 +78,6 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
     <script src="/studyBuddy/script.js"></script>
     <script>
         // JavaScript to handle dropdown menu
