--- a/text-book-solutions/index.html
+++ b/text-book-solutions/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Buddy</title>
+    <title>JustStudylol</title>
     <link rel="icon" href="https://i.postimg.cc/Fz2hR18L/pavan-logo.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -29,11 +29,36 @@
     </nav>
 
     <div class="center-box">
-        <a href="/studyBuddy/text-book-solutions/">Texbook Solutions</a> <br>
-        <a href="/studyBuddy/quiz">Quiz</a>
+        <h2>Textbook solutions</h2>
+
+        <div class="subjects">
+
+            <div class="subject-item">
+                <a href="/studyBuddy/text-book-solutions/geography/">Geography</a>
+            </div>
+
+
+            <div class="subject-item">
+                    <a href="/studyBuddy/text-book-solutions/history ">History</a>
+            </div>
+    
+
+            <div class="subject-item">
+                    <a href="/studyBuddy/text-book-solutions/physics">Physics</a>
+            </div>
+
+            <div class="subject-item">
+                    <a href="/studyBuddy/text-book-solutions/chemistry">Chemistry</a>
+            </div>
+
+            <div class="subject-item">
+                    <a href="/studyBuddy/text-book-solutions/biology">Biology</a>
+            </div>
+
+            
+        </div>
     </div>
 
-    <script src="/studyBuddy/text-book-solutions/subject.js"></script>
     <script src="/studyBuddy/static/theme.js"></script>
 </body>
 </html>
