--- a/specimen2025/index.html
+++ b/specimen2025/index.html
@@ -7,25 +7,25 @@
     <title>Geography Revision</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/studyBuddy/subject.css">
-    <link rel="stylesheet" href="/studyBuddy/base.css">
+    <link rel="stylesheet" href="/studyBuddy/text-book-solutions/subject.css">
+    <link rel="stylesheet" href="/studyBuddy/static/base.css">
 
 </head>
 
 <body>
     <nav class="nav">
-        <a class="logo"></a>
-        <h>Geography Revesion</h>
+        <a href="/studyBuddy/" class="logo"> </a>
         <ul class="nav-links">
             <li><a target="_blank" href="https://pavansweb.github.io/UwU/">About Me</a></li>
             <li><a target="_blank" href="https://pavansweb.github.io/contact/">Contact</a></li>
         </ul>
-        <label class="switch">
-            <input type="checkbox" id="darkModeToggle" />
-            <span class="slider round"></span>
-            <span class="icon sun-icon">&#x2600;</span>
-            <span class="icon moon-icon">&#x1F319;</span>
-        </label>
+        <div class="dark-mode-toggle">
+            <input type="checkbox" id="darkModeToggle">
+            <label for="darkModeToggle" class="toggle-label">
+                <span class="sun-icon">&#x2600;</span>
+                <span class="moon-icon">&#x1F319;</span>
+            </label>
+        </div>
     </nav>
 
     <div class="center-box">
@@ -180,8 +180,8 @@
         </div>
     </div>
 
-    <script src="/studyBuddy/subject.js"></script>
-    <script src="/studyBuddy/script.js"></script>
+    <script src="/studyBuddy/text-book-solutions/subject.js"></script>
+    <script src="/studyBuddy/static/theme.js"></script>
     <script>
 
     </script>
